// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputFee should render 1`] = `
<DocumentFragment>
  <div
    class="flex space-x-2"
    data-testid="InputFee"
  >
    <div
      class="flex-1"
    >
      <div
        class="relative"
      >
        <div
          class="fixed invisible w-auto whitespace-nowrap"
        >
          0.3…
        </div>
        <div
          class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
              data-testid="InputCurrency"
              type="text"
              value="0.3"
            />
          </div>
        </div>
        <div
          class="absolute bottom-0 px-1 w-full"
        >
          <div
            class="flex flex-wrap justify-center"
            data-testid="Range"
          >
            <div
              class="Range__Track-sc-10itqc2-0 sgjTD"
              data-testid="Range__track"
              style="transform: scale(1); cursor: pointer;"
            >
              <div
                class="Range__TrackFilled-sc-10itqc2-1 egFfKP"
                data-testid="Range__track__filled"
              >
                <div
                  aria-valuemax="0.5"
                  aria-valuemin="0.006"
                  aria-valuenow="0.3"
                  class="Range__Thumb-sc-10itqc2-2 hXgqqU"
                  data-testid="Range__thumb"
                  draggable="false"
                  role="slider"
                  style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                  tabindex="0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="inline-flex items-center space-x-2"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        Slow
      </button>
      <button
        aria-checked="false"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        Average
      </button>
      <button
        aria-checked="false"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        Fast
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee should update fee if value property changes 1`] = `
<DocumentFragment>
  <div
    class="flex space-x-2"
    data-testid="InputFee"
  >
    <div
      class="flex-1"
    >
      <div
        class="relative"
      >
        <div
          class="fixed invisible w-auto whitespace-nowrap"
        >
          0.0123…
        </div>
        <div
          class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
              data-testid="InputCurrency"
              type="text"
              value="0.0123"
            />
          </div>
        </div>
        <div
          class="absolute bottom-0 px-1 w-full"
        >
          <div
            class="flex flex-wrap justify-center"
            data-testid="Range"
          >
            <div
              class="Range__Track-sc-10itqc2-0 sgjTD"
              data-testid="Range__track"
              style="transform: scale(1); cursor: pointer;"
            >
              <div
                class="Range__TrackFilled-sc-10itqc2-1 egFfKP"
                data-testid="Range__track__filled"
              >
                <div
                  aria-valuemax="0.5"
                  aria-valuemin="0.006"
                  aria-valuenow="0.0123"
                  class="Range__Thumb-sc-10itqc2-2 hXgqqU"
                  data-testid="Range__thumb"
                  draggable="false"
                  role="slider"
                  style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                  tabindex="0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="inline-flex items-center space-x-2"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        Slow
      </button>
      <button
        aria-checked="false"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        Average
      </button>
      <button
        aria-checked="false"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        Fast
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee should update fee when clicking on avg 1`] = `
<DocumentFragment>
  <div
    class="flex space-x-2"
    data-testid="InputFee"
  >
    <div
      class="flex-1"
    >
      <div
        class="relative"
      >
        <div
          class="fixed invisible w-auto whitespace-nowrap"
        >
          0.456…
        </div>
        <div
          class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
              data-testid="InputCurrency"
              type="text"
              value="0.456"
            />
          </div>
        </div>
        <div
          class="absolute bottom-0 px-1 w-full"
        >
          <div
            class="flex flex-wrap justify-center"
            data-testid="Range"
          >
            <div
              class="Range__Track-sc-10itqc2-0 sgjTD"
              data-testid="Range__track"
              style="transform: scale(1); cursor: pointer;"
            >
              <div
                class="Range__TrackFilled-sc-10itqc2-1 egFfKP"
                data-testid="Range__track__filled"
              >
                <div
                  aria-valuemax="0.5"
                  aria-valuemin="0.006"
                  aria-valuenow="0.456"
                  class="Range__Thumb-sc-10itqc2-2 hXgqqU"
                  data-testid="Range__thumb"
                  draggable="false"
                  role="slider"
                  style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                  tabindex="0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="inline-flex items-center space-x-2"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        Slow
      </button>
      <button
        aria-checked="true"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        Average
      </button>
      <button
        aria-checked="false"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        Fast
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee should update fee when clicking on max 1`] = `
<DocumentFragment>
  <div
    class="flex space-x-2"
    data-testid="InputFee"
  >
    <div
      class="flex-1"
    >
      <div
        class="relative"
      >
        <div
          class="fixed invisible w-auto whitespace-nowrap"
        >
          0.5…
        </div>
        <div
          class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
              data-testid="InputCurrency"
              type="text"
              value="0.5"
            />
          </div>
        </div>
        <div
          class="absolute bottom-0 px-1 w-full"
        >
          <div
            class="flex flex-wrap justify-center"
            data-testid="Range"
          >
            <div
              class="Range__Track-sc-10itqc2-0 sgjTD"
              data-testid="Range__track"
              style="transform: scale(1); cursor: pointer;"
            >
              <div
                class="Range__TrackFilled-sc-10itqc2-1 egFfKP"
                data-testid="Range__track__filled"
              >
                <div
                  aria-valuemax="0.5"
                  aria-valuemin="0.006"
                  aria-valuenow="0.5"
                  class="Range__Thumb-sc-10itqc2-2 hXgqqU"
                  data-testid="Range__thumb"
                  draggable="false"
                  role="slider"
                  style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                  tabindex="0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="inline-flex items-center space-x-2"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        Slow
      </button>
      <button
        aria-checked="false"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        Average
      </button>
      <button
        aria-checked="true"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        Fast
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee should update fee when clicking on min 1`] = `
<DocumentFragment>
  <div
    class="flex space-x-2"
    data-testid="InputFee"
  >
    <div
      class="flex-1"
    >
      <div
        class="relative"
      >
        <div
          class="fixed invisible w-auto whitespace-nowrap"
        >
          0.006…
        </div>
        <div
          class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
              data-testid="InputCurrency"
              type="text"
              value="0.006"
            />
          </div>
        </div>
        <div
          class="absolute bottom-0 px-1 w-full"
        >
          <div
            class="flex flex-wrap justify-center"
            data-testid="Range"
          >
            <div
              class="Range__Track-sc-10itqc2-0 sgjTD"
              data-testid="Range__track"
              style="transform: scale(1); cursor: pointer;"
            >
              <div
                class="Range__TrackFilled-sc-10itqc2-1 egFfKP"
                data-testid="Range__track__filled"
              >
                <div
                  aria-valuemax="0.5"
                  aria-valuemin="0.006"
                  aria-valuenow="0.006"
                  class="Range__Thumb-sc-10itqc2-2 hXgqqU"
                  data-testid="Range__thumb"
                  draggable="false"
                  role="slider"
                  style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                  tabindex="0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="inline-flex items-center space-x-2"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="true"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        Slow
      </button>
      <button
        aria-checked="false"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        Average
      </button>
      <button
        aria-checked="false"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cqjOKw"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        Fast
      </button>
    </div>
  </div>
</DocumentFragment>
`;
